syntax = "proto3";

package protocol;

message Hello {
  string pc_name = 1;
  string instance_id = 2;
  uint32 listen_port = 3;
  repeated string shares = 4;
  uint32 plain_port = 5;
  bool use_tls_for_peers = 6;
  bool decline_remote_shares = 7;
}

enum ChangeKind {
  CREATE = 0;
  MODIFY = 1;
  DELETE = 2;
}

message FileMeta {
  string path = 1;
  uint64 size = 2;
  int64 mtime = 3;
  bytes hash = 4;
  int64 version = 5;
  bool deleted = 6;
}

message FileChange {
  int64 seq = 1;
  bytes share_id = 2;
  string path = 3;
  ChangeKind kind = 4;
  FileMeta meta = 5;
}

message BatchManifest {
  string batch_id = 1;
  bytes share_id = 2;
  string from_node = 3;
  int64 created_at = 4;
  repeated FileChange changes = 5;
}

message BatchAck {
  bytes share_id = 1;
  int64 upto_seq = 2;
}

message FileChunk {
  bytes share_id = 1;
  string path = 2;
  uint64 offset = 3;
  bytes data = 4;
  bool eof = 5;
}

message WireEnvelope {
  oneof msg {
    Hello hello = 1;
    BatchManifest batch = 2;
    FileChunk file_chunk = 3;
    BatchAck batch_ack = 4;
  }
}
